--- a/InternetesAlkalmazasFejlesztesJC0YK5/Pages/Index.razor
+++ b/InternetesAlkalmazasFejlesztesJC0YK5/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Készítette: Nikházy Márk Levente</h1>
+<h2>JC0YK5</h2>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h3>Ez az aplikáció Blazor Server-ben készült.</h3>
