--- a/InternetesAlkalmazasFejlesztesJC0YK5/Shared/NavMenu.razor
+++ b/InternetesAlkalmazasFejlesztesJC0YK5/Shared/NavMenu.razor
@@ -8,13 +8,23 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="alkatreszkezeles">
+            <NavLink class="nav-link" href="alkatreszkezeles/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Alkatrészek kezelése
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="termekkezeles">
+            <NavLink class="nav-link" href="termekkezeles/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Termék hozzáadása
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="alkatreszlista">
+                <span class="oi oi-list" aria-hidden="true"></span> Alkatrész lista
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="termeklista">
+                <span class="oi oi-list" aria-hidden="true"></span> Termék lista
             </NavLink>
         </li>
     </ul>
